--- a/handphone.html
+++ b/handphone.html
@@ -62,7 +62,7 @@
         </header>
         <div class="flex flex-col items-start p-5">
           <div class="flex items-start bg-white shadow-md rounded-lg overflow-hidden w-3/4 cursor-pointer mb-4" onclick="window.location.href='Handphone/berita1.html'">
-            <img src="../assets/img/Hp/Realme 11 Pro.jpg" alt="Judul Berita" class="w-24 h-24 object-cover mr-4">
+            <img src="assets/img/Hp/Realme 11 Pro.jpg" alt="Judul Berita" class="w-24 h-24 object-cover mr-4">
             <div class="flex flex-col">
               <h3 class="text-lg font-bold text-gray-800">Rekomendasi handphone Terbaik Harga 3 Jutaan 2024</h3>
               <p class="text-gray-600">Deskripsi singkat tentang berita ini. Klik gambar atau judul untuk informasi lebih lanjut.</p>
@@ -70,7 +70,7 @@
           </div>
         
           <div class="flex items-start bg-white shadow-md rounded-lg overflow-hidden  w-3/4 cursor-pointer mb-4" onclick="window.location.href='Handphone/berita2.html'">
-            <img src="../assets/img/Hp/berita2/poco x6 pro.png" alt="Judul Berita Kedua" class="w-24 h-24 object-cover mr-4">
+            <img src="assets/img/Hp/berita2/poco x6 pro.png" alt="Judul Berita Kedua" class="w-24 h-24 object-cover mr-4">
             <div class="flex flex-col">
               <h3 class="text-lg font-bold text-gray-800">5 Rekomendasi Smartphone Terbaik dengan Harga 5-6 Juta untuk Tahun 2025</h3>
               <p class="text-gray-600">Deskripsi singkat tentang berita kedua ini. Klik gambar atau judul untuk informasi lebih lanjut.</p>
