--- a/laptop.html
+++ b/laptop.html
@@ -62,7 +62,7 @@
         </header>
         <div class="flex flex-col items-start p-5">
           <div class="flex items-start bg-white shadow-md rounded-lg overflow-hidden w-3/4 cursor-pointer mb-4" onclick="window.location.href='Laptop/berita1.html'">
-            <img src="../assets/img/laptop/Acer Aspire 5 A514-54.png" alt="Judul Berita" class="w-24 h-24 object-cover mr-4">
+            <img src="assets/img/laptop/Acer Aspire 5 A514-54.png" alt="Judul Berita" class="w-24 h-24 object-cover mr-4">
             <div class="flex flex-col">
               <h3 class="text-lg font-bold text-gray-800">Rekomendasi Laptop Harga 5-6 Jutaan Terbaik di 2024</h3>
               <p class="text-gray-600">Klik gambar atau judul untuk informasi lebih lanjut.</p>
@@ -70,7 +70,7 @@
           </div>
         
           <div class="flex items-start bg-white shadow-md rounded-lg overflow-hidden  w-3/4 cursor-pointer mb-4" onclick="window.location.href='Laptop/berita2.html'">
-            <img src="../assets/img/laptop/berita2/ASUS ROG Zephyrus G14.png" alt="Judul Berita Kedua" class="w-24 h-24 object-cover mr-4">
+            <img src="assets/img/laptop/berita2/ASUS ROG Zephyrus G14.png" alt="Judul Berita Kedua" class="w-24 h-24 object-cover mr-4">
             <div class="flex flex-col">
               <h3 class="text-lg font-bold text-gray-800">Rekomendasi Laptop Gaming Terbaik di 2024</h3>
               <p class="text-gray-600">Klik gambar atau judul untuk informasi lebih lanjut.</p>
