--- a/smartwatch.html
+++ b/smartwatch.html
@@ -62,7 +62,7 @@
         </header>
         <div class="flex flex-col items-start p-5">
           <div class="flex items-start bg-white shadow-md rounded-lg overflow-hidden w-3/4 cursor-pointer mb-4" onclick="window.location.href='Smartwatch/berita1.html'">
-            <img src="../assets/img/Smartwatch/berita1/Apple Watch Series 9.png" alt="Judul Berita" class="w-24 h-24 object-cover mr-4">
+            <img src="assets/img/Smartwatch/berita1/Apple Watch Series 9.png" alt="Judul Berita" class="w-24 h-24 object-cover mr-4">
             <div class="flex flex-col">
               <h3 class="text-lg font-bold text-gray-800">Rekomendasi Smartwatch Terbaik di 2024 Untuk kebutuhan Anda</h3>
               <p class="text-gray-600">Klik gambar atau judul untuk informasi lebih lanjut.</p>
