--- a/tablet.html
+++ b/tablet.html
@@ -62,7 +62,7 @@
         </header>
         <div class="flex flex-col items-start p-5">
           <div class="flex items-start bg-white shadow-md rounded-lg overflow-hidden w-3/4 cursor-pointer mb-4" onclick="window.location.href='Tablets/berita1.html'">
-            <img src="../assets/img/Tablet/berita1/Xiaomi Pad 6S Pro 12.4.png" alt="Judul Berita" class="w-24 h-24 object-cover mr-4">
+            <img src="assets/img/Tablet/berita1/Xiaomi Pad 6S Pro 12.4.png" alt="Judul Berita" class="w-24 h-24 object-cover mr-4">
             <div class="flex flex-col">
               <h3 class="text-lg font-bold text-gray-800">Rekomendasi Tablet Terbaik di 2024</h3>
               <p class="text-gray-600">Klik gambar atau judul untuk informasi lebih lanjut.</p>
